# libmfx

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.in  libtool  readme-dispatcher.rtf
include/: mfx_dispatcher.h  mfx_dispatcher_defs.h  mfx_exposed_functions_list.h  mfx_win_reg_key.h
include/msdk/include/: mfxaudio++.h  mfxcommon.h  mfxplugin.h  mfxstructures.h  mfxvideo.h
src/: main.cpp  mfx_dispatcher.cpp  mfx_dispatcher_log.cpp  mfx_dispatcher_trace.cpp  mfx_dxva2_device.cpp  mfx_library_iterator.cpp  mfx_load_dll.cpp  mfx_load_plugin.cpp
